2005-01-26  Arvind Samptur  <arvind.samptur@wipro.com>

	Don't wireframe when accessibility is on, it apparently
	causes a desktop wide freeze.

	* src/prefs.[ch] (meta_prefs_init) (change_notify)
	(update_gnome_accessibility) (meta_preference_to_string)
	(meta_prefs_get_gnome_accessibility) : Add code to monitor
	accessibility status.

	* src/display.c (meta_display_begin_grab_op): Check
	accessibility status before going ahead with wireframe.
	Fixes #159538

2005-01-25  Elijah Newren  <newren@gmail.com>

	* src/tabpopup.c: (meta_select_workspace_expose_event): ignore
	sticky windows for non-active workspaces.  Fixes #165259.

2005-01-25  Elijah Newren  <newren@gmail.com>

	* src/window.c: (meta_window_new_with_attrs): set the window state
	hints _after_ applying session information.  Fixes #164677.

2005-01-25  Elijah Newren  <newren@gmail.com>

	Add man pages for metacity-window-demo and metacity-theme-viewer.
	Man pages from Jose Moya, auto-fu from Dave Ahlswede. (#143513)

	* doc/man/metacity-theme-viewer.1:
	* doc/man/metacity-window-demo.1:

	New man pages

	* doc/man/Makefile.am:
	* doc/Makefile.am:
	* configure.in:

	Make sure to install the man pages
	
	* doc/man/.cvsignore:
	
	Silence cvs

2005-01-25  Benjamin Kahn  <xkahn@novell.com>

	New 48x48 default icon as specified in bug #160660

2005-01-25  Elijah Newren  <newren@math.utah.edu>

	Patch from Stephane LOEUILLET in bug #151850.

	* src/metacity.desktop.in: specify encoding

2005-01-25  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>
 
 	* src/prefs.c (meta_prefs_init): Get gconf to load the
 	terminal dir so that we get the notifications when
 	the command is changed. Fixes bug #160934
 
2005-01-25  Elijah Newren  <newren@gmail.com>

	Refuse to focus a window with a modal transient, and focus the
	transient instead.  Fixes #164716.

	* src/window.c: (get_modal_transient): new function,
	(meta_window_focus): if the window has a modal transient, make